New Crowdin updates (#1710)

--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Chargement impossible !",
   "app.errors.unexpectedError": "Une erreur inconnue s'est produite. Veuillez réessayer.",
   "app.errors.unknowError": "Erreur inconnue.",
+  "crash.screen.title": "Yoroi a planté",
   "daedalusTransfer.error.noTransferTxError": "Il n'y pas de transaction à envoyer.",
   "daedalusTransfer.error.transferFundsError": "Impossible d'envoyer les fonds.",
   "daedalusTransfer.error.webSocketRestoreError": "Erreur lors de la récupération des adresses blockchain.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Obtention des adresses",
   "daedalusTransfer.waiting.title.label": "Le wallet Daedalus est en cours de récupération",
   "daedalusTransfer.waiting.warning": "Cela peut prendre du temps ou échouer si vous avez une mauvaise connexion internet",
+  "decryption.label": "Mot de passe de déchiffrage",
   "global.blog.learnMore": "Pour en savoir plus, vous pouvez lire notre {blogLink}.",
   "global.contact": "contacter l'assistance",
   "global.copyTooltipMessage": "Copié",
   "global.errors.fieldIsRequired": "Veuillez remplir ce champ.",
-  "global.errors.invalidMasterKey": "Clé maître fournie invalide, veuillez vérifier.",
   "global.errors.invalidPaperPassword": "Le mot de passe de Wallet Papier requiert au moins 10 caractères.",
   "global.errors.invalidRepeatPassword": "Ne correspond pas.",
   "global.errors.invalidWalletName": "La longueur du nom d'un wallet doit être comprise entre 1 et 40 caractères.",
   "global.errors.invalidWalletPassword": "Le mot de passe de dépense requiert au moins 10 caractères.",
+  "global.invalidKeyFormat.label": "Clé non valide. Doit être encodée en hexadécimal.",
+  "global.invalidKeyLength.label": "Clé non valide. Doit comporter {length} caractères.",
+  "global.invalidKeyLength2.label": "Clé non valide. Devrait être l'une des {lengths}.",
+  "global.key.label": "Clé",
   "global.labael.undelegate": "Ne plus déléguer",
   "global.label.addToAddressbook": "Ajouter au carnet d'adresses",
   "global.label.allow": "Permettre",
@@ -290,9 +295,7 @@
   "testnet.label.message": "AVERTISSEMENT : Il s’agit d’un réseau {network}. ADA n’a ici aucune valeur monétaire. Pour plus d’informations, veuillez consulter la FAQ à {faqLink}",
   "testnet.shelley.label.message": "VOUS ÊTES SUR LE RÉSEAU TEST ({network}).",
   "transfer.form.instructions.step1.text": "La restauration du solde prend en moyenne 1 minute. Lors de l'étape suivante, vous verrez une transaction se proposer à vous afin de déplacer tous vos fonds vers Yoroi. Veuillez vérifier avec minutie les détails de la transaction. Vous devrez vous acquitter des frais de transactions standards sur le réseau Cardano afin d'effectuer la transaction.",
-  "transfer.form.masterkey.input.hint": "Entrez la clé maître",
   "transfer.form.masterkey.input.label": "Clé maître",
-  "transfer.form.masterkey.requirement": "Remarque : les clés maîtres sont composées de 192 caractères encodés en hexadécimal",
   "transfer.instructions.attention.title.label": "Attention",
   "transfer.instructions.fee.source.disclaimer": "Les frais de transaction pour récupérer les fonds seront payés par le wallet que vous avez actuellement sélectionné.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Je reconnais qu'entrer dans la phrase de récupération de mon wallet matériel comporte un risque important.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "Wallet Daedalus de 12 mots",
   "transfer.legacy.daedalus.title": "Wallet Daedalus Legacy",
   "transfer.legacy.icarus.title": "Wallet Icarus/Yoroi",
+  "transfer.rewards.key.label": "Récompenses de la clé privée",
   "transfer.rewards.paper.label": "Récompenses de wallet papier",
   "transfer.rewards.regular.label": "Récompenses de la phrase de secours",
   "transfer.summary.addressFrom.label": "De",
@@ -428,7 +432,7 @@
   "wallet.dashboard.empty.title": "Vous n'avez pas encore délégué vos ADA",
   "wallet.dashboard.epochEndTitle": "Temps avant la fin de l'époque",
   "wallet.dashboard.epochProgress": "Progrès dans l'époque",
-  "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
+  "wallet.dashboard.epochTooltip": "Remarque : Après avoir délégué, la première récompense vous sera versée après {numEpochs} époques. Par la suite, les récompenses viendront à chaque époque.",
   "wallet.dashboard.graph.dayToggleLabel": "Jour (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Époque ({epochLength} jours)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Époque (1 jour)",
@@ -471,7 +475,7 @@
   "wallet.dashboard.summary.rewardsTitle": "Total des Récompenses",
   "wallet.dashboard.summary.title": "Votre Synthèse",
   "wallet.dashboard.upcomingRewards.at": "à",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "Fin de l'époque",
   "wallet.dashboard.upcomingRewards.noRewards": "aucune récompense ne sera gagnée pour cette époque",
   "wallet.dashboard.upcomingRewards.title": "Récompenses à venir",
   "wallet.dashboard.warning.pendingTx": "Les informations du tableau de d'enjeu (staking) seront mises à jour une fois que votre transaction en cours sera confirmée",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Ledger est verrouillé, veuillez le déverrouiller et réessayer.",
   "wallet.hw.ledger.common.error.104": "Délai de réponse du dispositif du Ledger écoulé, veuillez réessayer.",
   "wallet.hw.ledger.common.error.105": "Erreur du réseau. Veuillez vérifier votre connexion Internet.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Ajouter un nouveau wallet",
   "wallet.nav.allWalletsLabel": "Tous mes wallets",
   "wallet.nav.backButton": "Retour à mes wallets",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Échange",
   "wallet.transaction.type.intrawallet": "Transaction entre wallets {currency}",
   "wallet.transaction.type.multiparty": "Transaction multiparties {currency}",
+  "wallet.transaction.withdraw": "Retrait",
   "wallet.transaction.withdrawalsLabel": "Retraits",
   "wallet.transfer.cards.byron": "Wallet de l'ère Byron",
   "wallet.transfer.cards.shelley": "Wallet de type Shelley",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Impossible d'envoyer les fonds.",
   "yoroiTransfer.error.walletChangedError": "Le portefeuille a changé. Veuillez reconfirmer votre transaction.",
   "yoroiTransfer.errorPage.title.label": "Impossible de transférer à partir d'un autre portefeuille",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Saisissez ici votre clé de staking et le mot de passe de dépense si la clé est cryptée",
   "yoroiTransfer.form.instructions.step0.text": "Entrez la phrase de récupération de 15 mots utilisée pour sauvegarder votre autre portefeuille afin de rétablir le solde et transférer tous les fonds dans votre portefeuille actuel.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Entrer la phrase de récupération de 21 mots utilisée lors de la création du wallet papier ainsi que le mot de passe du wallet papier afin d'en restaurer le solde et transférer tous les fonds.",
   "yoroiTransfer.start.instructions.hardware": "Porte-monnaie matériel",
