--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Het ophalen is niet mogelijk!",
   "app.errors.unexpectedError": "Er heeft zich een onverwachte storing voorgedaan, Probeer het alstublieft opnieuw.",
   "app.errors.unknowError": "Onbekende fout.",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Er is geen transactie om te versturen.",
   "daedalusTransfer.error.transferFundsError": "Het is niet mogelijk om fondsen te versturen.",
   "daedalusTransfer.error.webSocketRestoreError": "Fout tijdens het herstellen van \"Blockchain\" adressen.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Adressen ophalen",
   "daedalusTransfer.waiting.title.label": "De Daedalus portemonnee wordt hersteld",
   "daedalusTransfer.waiting.warning": "Dit kan lang duren of zelfs mislukken bij een slechte internetverbinding",
+  "decryption.label": "Decoderingswachtwoord",
   "global.blog.learnMore": "U kunt onze {blogLink} lezen voor meer informatie.",
   "global.contact": "Ondersteuningscontact",
   "global.copyTooltipMessage": "Gekopieerd",
   "global.errors.fieldIsRequired": "Verplicht veld.",
-  "global.errors.invalidMasterKey": "Foute hoofdsleutel ingevoerd, controleer deze.",
   "global.errors.invalidPaperPassword": "Het wachtwoord voor de \"Papieren\" Portemonnee moet uit minstens 10 karakters bestaan.",
   "global.errors.invalidRepeatPassword": "Komt niet overeen.",
   "global.errors.invalidWalletName": "De naam van uw Portemonnee moet minimaal 1 en maximaal 40 letters bevatten.",
   "global.errors.invalidWalletPassword": "Het betaalwachtwoord moet uit minstens 10 karakters bestaan.",
+  "global.invalidKeyFormat.label": "Ongeldige sleutel. Dient een hexa-decimaal getal te zijn.",
+  "global.invalidKeyLength.label": "Ongeldige sleutel. Dient tenminste {length} karakters te bevatten.",
+  "global.invalidKeyLength2.label": "Ongeldige sleutel. Moet zijn: een van {lengths}.",
+  "global.key.label": "Sleutel",
   "global.labael.undelegate": "Delegeren ongedaan maken",
   "global.label.addToAddressbook": "Toevoegen aan het adresboek",
   "global.label.allow": "Toestaan",
@@ -290,9 +295,7 @@
   "testnet.label.message": "WAARSCHUWING: Dit is een {network} netwerk. ADA heeft hier geen monetaire waarde. Voor meer informatie bekijk de \"FAQ\" op {faqLink}",
   "testnet.shelley.label.message": "U BENT OP HET TESTNET NETWERK ({network}).",
   "transfer.form.instructions.step1.text": "Het kost ongeveer 1 minuut om uw balans te controleren. In de volgende stap wordt u een transactie getoond dat all uw fondsen zal verplaatsen. Controleer de gegevens van de transactie zorgvuldig. U dient een standaard transactievergoeding te betalen op het Cardano netwerk om de transactie uit te voeren.",
-  "transfer.form.masterkey.input.hint": "Voer de hoofdsleutel in",
   "transfer.form.masterkey.input.label": "Hoofdsleutel",
-  "transfer.form.masterkey.requirement": "Opmerking: Hoofdsleutels zijn 192 karakters en hexadecimaal gecodeerd",
   "transfer.instructions.attention.title.label": "Opletten",
   "transfer.instructions.fee.source.disclaimer": "De transactiekosten om de vergoeding te claimen worden betaald door de portefeuille die u momenteel heeft geselecteerd.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Ik besef dat het invoeren van de herstelzin van mijn hardware Portemonnee een aanzienlijk risico met zich meebrengt.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "Daedalus Portemonnee met 12 woorden",
   "transfer.legacy.daedalus.title": "Daedalus Portemonnee met Legacy",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Portemonnee",
+  "transfer.rewards.key.label": "Beloningen van de privésleutel",
   "transfer.rewards.paper.label": "Vergoedingen van de \"Papieren\" portemonnee",
   "transfer.rewards.regular.label": "Vergoedingen van de herstelzin",
   "transfer.summary.addressFrom.label": "Van",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Ledger apparaat is op slot, haal het van slot af en probeer het opnieuw.",
   "wallet.hw.ledger.common.error.104": "Ledger apparaat timeout, probeer het opnieuw.",
   "wallet.hw.ledger.common.error.105": "Netwerk fout. Controleer uw internetverbinding.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Nieuwe Portemonnee",
   "wallet.nav.allWalletsLabel": "Alle portemonnees",
   "wallet.nav.backButton": "Terug naar mijn Portemonnees",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transactie tussen Portemonnees",
   "wallet.transaction.type.multiparty": "{currency} transacties tussen meerdere partijen",
+  "wallet.transaction.withdraw": "Opname",
   "wallet.transaction.withdrawalsLabel": "Opnames",
   "wallet.transfer.cards.byron": "Byron-tijdperk Portemonnee",
   "wallet.transfer.cards.shelley": "Shelley-tijdperk portemonnee",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Niet in staat om fondsen te versturen.",
   "yoroiTransfer.error.walletChangedError": "De Portemonnee is veranderd. Bevestig uw transactie opnieuw.",
   "yoroiTransfer.errorPage.title.label": "Niet in staat om overdrachten uit te voeren van een andere Portemonnee",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Voer hier uw Stemsleutel in en het bestedingswachtwoord als deze versleuteld is",
   "yoroiTransfer.form.instructions.step0.text": "Voer de herstelzin van 15 woorden (gebruikt als ​​back-up) van uw andere Portemonnee om het saldo te herstellen en al het geld over te maken naar de huidige Portemonnee.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Voer de herstelzin van 21 woorden in die wordt gebruikt om een ​​back-up te maken van uw Yoroi \"Papier\" Portemonnee en uw papieren wachtwoord om het saldo te herstellen en het kapitaal over te maken.",
   "yoroiTransfer.start.instructions.hardware": "Hardware Portemonnee",
