--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Laden nicht möglich!",
   "app.errors.unexpectedError": "Etwas Unerwartetes ist passiert. Bitte versuche es erneut.",
   "app.errors.unknowError": "Unbekannter Fehler.",
+  "crash.screen.title": "Yoroi ist abgestürzt",
   "daedalusTransfer.error.noTransferTxError": "Es gibt keine zu versendende Transaktion.",
   "daedalusTransfer.error.transferFundsError": "Das Guthaben konnte nicht überwiesen werden.",
   "daedalusTransfer.error.webSocketRestoreError": "Fehler beim Wiederherstellen der Blockchain-Adressen.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Adressen werden abgerufen",
   "daedalusTransfer.waiting.title.label": "Daedalus Wallet wird wiederhergestellt",
   "daedalusTransfer.waiting.warning": "Dies kann lange dauern oder bei schlechten Internet-Verbindungen fehlschlagen",
-  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "decryption.label": "Entschlüsselungs-Kennwort",
+  "global.blog.learnMore": "Mehr darüber kannst  Du in unserem {blogLink} lesen.",
   "global.contact": "den Support kontaktieren",
   "global.copyTooltipMessage": "Kopiert",
   "global.errors.fieldIsRequired": "Dieses Feld muss ausgefüllt werden.",
-  "global.errors.invalidMasterKey": "Ungültiger Generalschlüssel eingegeben, bitte überprüfen.",
   "global.errors.invalidPaperPassword": "Das Papier-Wallet Kennwort muss mindestens 10 Zeichen lang sein.",
   "global.errors.invalidRepeatPassword": "Stimmt nicht überein.",
   "global.errors.invalidWalletName": "Der Wallet-Name muss aus mindestens 1 und maximal 40 Zeichen bestehen.",
   "global.errors.invalidWalletPassword": "Das Ausgabe-Kennwort muss mindestens 10 Zeichen lang sein.",
+  "global.invalidKeyFormat.label": "Ungültiger Schlüssel. Er sollte hexadezimal-codiert sein.",
+  "global.invalidKeyLength.label": "Ungültiger Schlüssel. Er sollte {length}  Zeichen lang sein.",
+  "global.invalidKeyLength2.label": "Ungültiger Schlüssel. Er sollte einen dieser Längen haben: {lengths}",
+  "global.key.label": "Schlüssel",
   "global.labael.undelegate": "Undelegieren",
   "global.label.addToAddressbook": "Zum Adressbuch hinzufügen",
   "global.label.allow": "Erlauben",
@@ -125,9 +130,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Diese ermöglichen es Dir sehr einfach Rechnungen mit Freunden und Geschäftspartnern durch einfaches Klicken auf eine URL zu teilen.",
   "global.uriSchemeTitleLabel": "Cardano Zahlungs-URLs",
-  "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
-  "incorrectTime.line2": "Time difference:",
-  "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
+  "incorrectTime.line1": "ACHTUNG: Die Zeit deines Computers stimmt nicht mit der des Servers überein. Das kann unerwartete Ergebnisse haben",
+  "incorrectTime.line2": "Zeitdifferenz: ",
+  "incorrectTime.line3": "Synchronisiere die Zeit auf Deinem Gerät um das Problem zu beheben",
   "inline.editing.input.cancel.label": "abbrechen",
   "inline.editing.input.change.label": "ändern",
   "inline.editing.input.changesSaved": "Die Änderungen wurden gespeichert",
@@ -290,9 +295,7 @@
   "testnet.label.message": "WARNUNG: Dies ist ein {network}-Netzwerk. ADA hat hier keinen echten Geldwert. Weitere Informationen hierzu findest Du in den FAQ unter {faqLink}",
   "testnet.shelley.label.message": "DU BIST IM TESTNETZ NETZWERK ({network}).",
   "transfer.form.instructions.step1.text": "Es wird ungefähr eine Minute dauern, um deinen Kontostand wiederherzustellen. Im nächsten Schritt wird eine Transaktion angezeigt, die dein gesamtes Guthaben transferiert. Bitte überprüfe die Details der Transaktion sehr sorgfältig. Es ist notwendig, für diese Transaktion eine Standard-Transaktionsgebühr im Cardano-Netzwerk zu bezahlen.",
-  "transfer.form.masterkey.input.hint": "Generalschlüssel eingeben",
   "transfer.form.masterkey.input.label": "Generalschlüssel",
-  "transfer.form.masterkey.requirement": "Hinweis: Generalschlüssel sind 192 Zeichen lang und hexadezimal-verschlüsselt",
   "transfer.instructions.attention.title.label": "Achtung",
   "transfer.instructions.fee.source.disclaimer": "Die Transaktionsgebühr zum Abrufen der Erträge wird von der aktuell ausgewählten Wallet bezahlt.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Ich erkenne an, dass die Eingabe des Wiederherstellungssatzes meiner Hardware-Wallet ein erhebliches Risiko birgt.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12-Wort Daedalus wallet",
   "transfer.legacy.daedalus.title": "Altes Daedalus wallet",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Wallet",
+  "transfer.rewards.key.label": "Erträge des privaten Schlüssels",
   "transfer.rewards.paper.label": "Erträge von Paper-wallet",
   "transfer.rewards.regular.label": "Erträge vom Wiederherstellungssatz",
   "transfer.summary.addressFrom.label": "Von",
@@ -428,7 +432,7 @@
   "wallet.dashboard.empty.title": "Du hast noch keine ADA delegiert",
   "wallet.dashboard.epochEndTitle": "Zeit bis zum Ende der Epoche",
   "wallet.dashboard.epochProgress": "Epochen Fortschritt",
-  "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
+  "wallet.dashboard.epochTooltip": "Hinweis: Nur die erste Belohnung nach dem Delegieren dauert {numEpochs} Epochen. Danach kommen in jeder Epoche Belohnungen.",
   "wallet.dashboard.graph.dayToggleLabel": "Tag (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Epoche ({epochLength} Tage)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Epoche (1 Tag)",
@@ -471,7 +475,7 @@
   "wallet.dashboard.summary.rewardsTitle": "Summe der Erträge",
   "wallet.dashboard.summary.title": "Zusammenfassung",
   "wallet.dashboard.upcomingRewards.at": "um",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "Ende der Epoche",
   "wallet.dashboard.upcomingRewards.noRewards": "In dieser Epoche wird es keine Erträge geben",
   "wallet.dashboard.upcomingRewards.title": "Anstehende Erträge",
   "wallet.dashboard.warning.pendingTx": "Die Informationen des Staking Dashboards werden aktualisiert, sobald Deine ausstehende Transaktion bestätigt ist",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Das Ledger Gerät ist gesperrt, bitte entsperren und wiederholen.",
   "wallet.hw.ledger.common.error.104": "Das Ledger Gerät hat nicht reagiert, bitte erneut versuchen.",
   "wallet.hw.ledger.common.error.105": "Netzwerk Fehler. Bitte überprüfe die Internet Verbindung.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Neue wallet hinzufügen",
   "wallet.nav.allWalletsLabel": "Alle Wallets",
   "wallet.nav.backButton": "Zurück zu meinen Wallets",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Börse",
   "wallet.transaction.type.intrawallet": "{currency} interne Wallet-Transaktion",
   "wallet.transaction.type.multiparty": "{currency} mehrfach-Teilnehmer Transaktion",
+  "wallet.transaction.withdraw": "Auszahlungen",
   "wallet.transaction.withdrawalsLabel": "Auszahlungen",
   "wallet.transfer.cards.byron": "Byron-Ära wallet",
   "wallet.transfer.cards.shelley": "Shelley-Ära wallet",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Guthaben-Übertragung fehlgeschlagen.",
   "yoroiTransfer.error.walletChangedError": "Die Wallet hat sich geändert. Bitte bestätige die Transaktion neu.",
   "yoroiTransfer.errorPage.title.label": "Übertragung von der anderen Wallet fehlgeschlagen",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Gib Deinen Staking-Schlüssel hier ein, mit dem Ausgaben-Kennwort sollte er verschlüsselt sein",
   "yoroiTransfer.form.instructions.step0.text": "Bitte die 15-stellige Wiederherstellungs-Phrase deiner anderen Wallet eingeben, um den Kontostand wiederherzustellen und das Gesamtguthaben in diese Wallet zu übertragen.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Geben Sie die 21-Wort-Wiederherstellungsphrase ein, mit der das Yoroi Paper Wallet gesichert wurde, und das Paper-Kennwort, um den Kontostand wiederherzustellen und alle Gelder zu überweisen.",
   "yoroiTransfer.start.instructions.hardware": "Hardware wallet",
