--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "No es posible cargar el contenido",
   "app.errors.unexpectedError": "Sucedió algo inesperado. Por favor, inténtalo nuevamente.",
   "app.errors.unknowError": "Error desconocido.",
+  "crash.screen.title": "Yoroi se ha caído",
   "daedalusTransfer.error.noTransferTxError": "No hay ninguna transacción para ser enviada.",
   "daedalusTransfer.error.transferFundsError": "No se pudieron transferir los fondos.",
   "daedalusTransfer.error.webSocketRestoreError": "Error al restaurar las direcciones de la blockchain.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Obteniendo direcciones",
   "daedalusTransfer.waiting.title.label": "La billetera de Daedalus está siendo restaurada",
   "daedalusTransfer.waiting.warning": "Esto puede tomar algo de tiempo (o fallar) si la conexión a Internet es deficiente",
+  "decryption.label": "Contraseña de descifrado",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "contactar con el soporte",
   "global.copyTooltipMessage": "Copiado",
   "global.errors.fieldIsRequired": "Este campo es obligatorio.",
-  "global.errors.invalidMasterKey": "La clave maestra ingresada es inválida. Por favor, verifica que sea la correcta.",
   "global.errors.invalidPaperPassword": "La contraseña de la Billetera de Papel requiere al menos 10 caracteres.",
   "global.errors.invalidRepeatPassword": "No coincide.",
   "global.errors.invalidWalletName": "El nombre de la billetera requiere un mínimo de 1 letra, y máximo de 40 letras.",
   "global.errors.invalidWalletPassword": "La contraseña de gastos requiere al menos 10 caracteres.",
+  "global.invalidKeyFormat.label": "Clave inválida. Debería estar codificada en hexadecimal.",
+  "global.invalidKeyLength.label": "Clave inválida. Debe tener {length} caracteres de longitud.",
+  "global.invalidKeyLength2.label": "Clave inválida. Debería tener un largo de {lengths}.",
+  "global.key.label": "Clave",
   "global.labael.undelegate": "Des-delegar",
   "global.label.addToAddressbook": "Añadir a la libreta de direcciones",
   "global.label.allow": "Permitir",
@@ -290,9 +295,7 @@
   "testnet.label.message": "ADVERTENCIA: Se trata de una red {network}. ADA no tiene valor monetario aquí. Para obtener más información, consulta las preguntas frecuentes (FAQ) en {faqLink}",
   "testnet.shelley.label.message": "ESTÁS EN LA RED DE PRUEBA ({network}).",
   "transfer.form.instructions.step1.text": "Tardará aproximadamente 1 minuto en restablecer tu saldo. En el siguiente paso, se presentará una transacción que moverá todos tus fondos. Por favor, revisa los detalles de la transacción cuidadosamente. Para realizar dicha transacción, deberás pagar una comisión por transacción estándar en la red de Cardano.",
-  "transfer.form.masterkey.input.hint": "Ingresa la clave maestra",
   "transfer.form.masterkey.input.label": "Clave Maestra",
-  "transfer.form.masterkey.requirement": "Nota: Las claves maestras tienen 192 caracteres, y están codificadas hexadecimalmente",
   "transfer.instructions.attention.title.label": "Atención",
   "transfer.instructions.fee.source.disclaimer": "La comisión de transacción para reclamar los fondos será pagada por la billetera actualmente seleccionada.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Reconozco que ingresar la frase de recuperación de mi billetera de hardware implica un riesgo considerable.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12 palabras de la billetera Daedalus",
   "transfer.legacy.daedalus.title": "Billetera Daedalus Antigua",
   "transfer.legacy.icarus.title": "Billetera Icarus/Yoroi",
+  "transfer.rewards.key.label": "Recompensas de la clave privada",
   "transfer.rewards.paper.label": "Recompensas de la billetera de papel",
   "transfer.rewards.regular.label": "Recompensas a partir de la frase de recuperación",
   "transfer.summary.addressFrom.label": "Desde",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "El dispositivo Ledger está bloqueado. Por favor, desbloquéalo y vuelve a intentarlo.",
   "wallet.hw.ledger.common.error.104": "Tiempo de espera del dispositivo Ledger agotado. Por favor, inténtalo nuevamente.",
   "wallet.hw.ledger.common.error.105": "Error de red. Por favor, comprueba tu conexión a Internet.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Añadir billetera",
   "wallet.nav.allWalletsLabel": "Todas las billeteras",
   "wallet.nav.backButton": "Volver a mis billeteras",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transacción intra-billetera",
   "wallet.transaction.type.multiparty": "{currency} transacción multipartita",
+  "wallet.transaction.withdraw": "Retiro",
   "wallet.transaction.withdrawalsLabel": "Retiros",
   "wallet.transfer.cards.byron": "Billetera de la era Byron",
   "wallet.transfer.cards.shelley": "Billetera de la era Shelley",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "No se pudieron transferir los fondos.",
   "yoroiTransfer.error.walletChangedError": "La billetera se ha modificado. Por favor, vuelve a confirmar la transacción.",
   "yoroiTransfer.errorPage.title.label": "No se pudo realizar la transferencia de otra billetera",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Introduce tu clave de delegación aquí, y la contraseña de gastos si la clave está encriptada",
   "yoroiTransfer.form.instructions.step0.text": "Ingresa la frase de recuperación de 15 palabras utilizada para respaldar tu otra billetera, para restaurar el saldo y transferir todos los fondos a la billetera actual.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Ingresa la frase de recuperación de 21 palabras de tu billetera de papel de Yoroi, y la contraseña asignada, para restaurar el saldo y transferir todos los fondos.",
   "yoroiTransfer.start.instructions.hardware": "Billetera de hardware",
