--- a/app/i18n/locales/hr-HR.json
+++ b/app/i18n/locales/hr-HR.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Unable to load!",
   "app.errors.unexpectedError": "Something unexpected happened. Please retry.",
   "app.errors.unknowError": "Unknown error.",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "There is no transaction to be sent.",
   "daedalusTransfer.error.transferFundsError": "Unable to transfer funds.",
   "daedalusTransfer.error.webSocketRestoreError": "Error while restoring blockchain addresses.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Fetching addresses",
   "daedalusTransfer.waiting.title.label": "Daedalus wallet is being restored",
   "daedalusTransfer.waiting.warning": "This may take a long time or fail on poor internet connections",
+  "decryption.label": "Decryption password",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "contact support",
   "global.copyTooltipMessage": "Copied",
   "global.errors.fieldIsRequired": "This field is required.",
-  "global.errors.invalidMasterKey": "Invalid master key entered, please check.",
   "global.errors.invalidPaperPassword": "Paper Wallet password requires at least 10 characters.",
   "global.errors.invalidRepeatPassword": "Doesn't match.",
   "global.errors.invalidWalletName": "Wallet name requires at least 1 and at most 40 letters.",
   "global.errors.invalidWalletPassword": "Spending password requires at least 10 characters.",
+  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
+  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
+  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.key.label": "Key",
   "global.labael.undelegate": "Undelegate",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "Allow",
@@ -290,9 +295,7 @@
   "testnet.label.message": "WARNING: This is a {network} network. ADA has no monetary value here. For more information, check out the FAQ at {faqLink}",
   "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK ({network}).",
   "transfer.form.instructions.step1.text": "It will take about 1 minute to restore your balance. In the next step, you will be presented with a transaction that will move all of your funds. Please review the details of the transaction carefully. You will need to pay a standard transaction fee on the Cardano network to make the transaction.",
-  "transfer.form.masterkey.input.hint": "Enter master key",
   "transfer.form.masterkey.input.label": "Master key",
-  "transfer.form.masterkey.requirement": "Note: master keys are 192 characters and hexadecimal-encoded",
   "transfer.instructions.attention.title.label": "Attention",
   "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "I acknowledge that entering my hardware wallet's recovery phrase carries significant risk.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12-word Daedalus wallet",
   "transfer.legacy.daedalus.title": "Legacy Daedalus Wallet",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Wallet",
+  "transfer.rewards.key.label": "Rewards from private key",
   "transfer.rewards.paper.label": "Rewards from paper wallet",
   "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "From",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Ledger device is locked, please unlock it and retry.",
   "wallet.hw.ledger.common.error.104": "Ledger device timeout, please retry.",
   "wallet.hw.ledger.common.error.105": "Network error. Please check your internet connection.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Add new wallet",
   "wallet.nav.allWalletsLabel": "All wallets",
   "wallet.nav.backButton": "Back to my wallets",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} intrawallet transaction",
   "wallet.transaction.type.multiparty": "{currency} multiparty transaction",
+  "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Unable to transfer funds.",
   "yoroiTransfer.error.walletChangedError": "The wallet has changed. Please re-confirm your transaction.",
   "yoroiTransfer.errorPage.title.label": "Unable to transfer from another wallet",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "Enter the 15-word recovery phrase used to back up your other wallet to restore the balance and transfer all the funds to current wallet.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Enter the 21-word recovery phrase used to back up your Yoroi Paper wallet and your paper password to restore the balance and transfer all the funds.",
   "yoroiTransfer.start.instructions.hardware": "Hardware wallet",
