--- a/app/i18n/locales/id-ID.json
+++ b/app/i18n/locales/id-ID.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Tidak bisa memuat!",
   "app.errors.unexpectedError": "Sesuatu yang tak terduga terjadi. Coba lagi.",
   "app.errors.unknowError": "Terjadi kesalahan yang tidak diketahui.",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Tidak ada transaksi untuk dikirim.",
   "daedalusTransfer.error.transferFundsError": "Transfer dana tidak berhasil.",
   "daedalusTransfer.error.webSocketRestoreError": "Terjadi kesalahan saat memulihkan address blockchain.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Mengambil address",
   "daedalusTransfer.waiting.title.label": "Wallet Daedalus sedang dipulihkan",
   "daedalusTransfer.waiting.warning": "Ini mungkin akan memakan waktu lama atau akan gagal ketika koneksi internet buruk",
+  "decryption.label": "Decryption password",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "contact support",
   "global.copyTooltipMessage": "Disalin",
   "global.errors.fieldIsRequired": "Isian ini wajib diisi.",
-  "global.errors.invalidMasterKey": "Master key yang Anda masukkan salah, harap periksa kembali.",
   "global.errors.invalidPaperPassword": "Paper Wallet password requires at least 10 characters.",
   "global.errors.invalidRepeatPassword": "Tidak cocok.",
   "global.errors.invalidWalletName": "Nama wallet membutuhkan setidaknya 1 dan paling banyak 40 huruf.",
   "global.errors.invalidWalletPassword": "Spending password requires at least 10 characters.",
+  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
+  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
+  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.key.label": "Key",
   "global.labael.undelegate": "Undelegate",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "Izinkan",
@@ -290,9 +295,7 @@
   "testnet.label.message": "PERINGATAN: Ini adalah jaringan {network}. ADA tidak memiliki nilai moneter di sini. Untuk informasi lebih lanjut, lihat FAQ di {faqLink}",
   "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK ({network}).",
   "transfer.form.instructions.step1.text": "Diperlukan sekitar 1 menit untuk mengembalikan saldo Anda. Pada langkah berikutnya, Anda akan diberikan transaksi yang akan memindahkan semua dana Anda. Harap tinjau detail transaksi dengan cermat. Anda harus membayar biaya transaksi standar pada jaringan Cardano untuk melakukan transaksi.",
-  "transfer.form.masterkey.input.hint": "Masukkan master key",
   "transfer.form.masterkey.input.label": "Master key",
-  "transfer.form.masterkey.requirement": "Catatan: master key adalah 192 karakter dan hexadecimal-encoded",
   "transfer.instructions.attention.title.label": "Perhatian",
   "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "I acknowledge that entering my hardware wallet's recovery phrase carries significant risk.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12-word Daedalus wallet",
   "transfer.legacy.daedalus.title": "Legacy Daedalus Wallet",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Wallet",
+  "transfer.rewards.key.label": "Rewards from private key",
   "transfer.rewards.paper.label": "Rewards from paper wallet",
   "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "Dari",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Ledger device is locked, please unlock it and retry.",
   "wallet.hw.ledger.common.error.104": "Ledger device timeout, please retry.",
   "wallet.hw.ledger.common.error.105": "Network error. Please check your internet connection.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Add new wallet",
   "wallet.nav.allWalletsLabel": "All wallets",
   "wallet.nav.backButton": "Back to my wallets",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transaksi intrawallet",
   "wallet.transaction.type.multiparty": "{currency} transaksi multiparty",
+  "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Tidak dapat transfer dana.",
   "yoroiTransfer.error.walletChangedError": "Wallet telah berubah. Harap konfirmasi ulang transaksi Anda.",
   "yoroiTransfer.errorPage.title.label": "Tidak dapat transfer dari wallet lain",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "Masukkan 15 kata frasa pemulihan yang digunakan untuk mencadangkan wallet Anda yang lain untuk mengembalikan saldo dan mentransfer semua dana ke wallet saat ini.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Enter the 21-word recovery phrase used to back up your Yoroi Paper wallet and your paper password to restore the balance and transfer all the funds.",
   "yoroiTransfer.start.instructions.hardware": "Hardware wallet",
