--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Impossibile caricare!",
   "app.errors.unexpectedError": "E' successo qualcosa di inaspettato. Riprovare, per favore.",
   "app.errors.unknowError": "Errore sconosciuto.",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Non c'è nessuna transazione da inviare.",
   "daedalusTransfer.error.transferFundsError": "Impossibile trasferire fondi.",
   "daedalusTransfer.error.webSocketRestoreError": "Errore durante il ripristino degli indirizzi blockchain.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Recupero degli indirizzi",
   "daedalusTransfer.waiting.title.label": "Il portafoglio Daedalus è in fase di ripristino",
   "daedalusTransfer.waiting.warning": "Questo potrebbe richiedere tempi lunghi o anche fallire su connessioni lente",
+  "decryption.label": "Decryption password",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "contatta il supporto",
   "global.copyTooltipMessage": "Copiato",
   "global.errors.fieldIsRequired": "Questo campo è obbligatorio.",
-  "global.errors.invalidMasterKey": "L'immissione della chiave principale non è valida, si prega di controllare.",
   "global.errors.invalidPaperPassword": "La password del portafoglio cartaceo richiede almeno 10 caratteri.",
   "global.errors.invalidRepeatPassword": "Non corrisponde.",
   "global.errors.invalidWalletName": "Il nome del portafoglio richiede un minimo di 1 lettera e ed un massimo 40 lettere.",
   "global.errors.invalidWalletPassword": "La password di spesa richiede almeno 10 caratteri.",
+  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
+  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
+  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.key.label": "Key",
   "global.labael.undelegate": "Rimuovi delega",
   "global.label.addToAddressbook": "Aggiungi alla rubrica",
   "global.label.allow": "Permetti",
@@ -290,9 +295,7 @@
   "testnet.label.message": "ATTENZIONE: questa è una rete {network}. ADA qui non ha alcun valore monetario. Per ulteriori informazioni, consulta le domande frequenti su {faqLink}",
   "testnet.shelley.label.message": "SEI SULLA RETE TESTNET ({network}).",
   "transfer.form.instructions.step1.text": "Ci vorrà circa 1 minuto per ripristinare il tuo saldo. Nel passaggio successivo, ti verrà presentata una transazione che trasferirà tutti i tuoi fondi. Si prega di rivedere attentamente i dettagli della transazione. Per effettuare la transazione dovrai pagare una tariffa di transazione standard sulla rete Cardano.",
-  "transfer.form.masterkey.input.hint": "Inserisci la chiave principale",
   "transfer.form.masterkey.input.label": "Chiave principale",
-  "transfer.form.masterkey.requirement": "Nota: le chiavi principali sono composte da 192 caratteri e con codifica esadecimale",
   "transfer.instructions.attention.title.label": "Attenzione",
   "transfer.instructions.fee.source.disclaimer": "La commissione di transazione per richiedere i fondi sarà pagata dal portafoglio che hai selezionato.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Sono consapevole del fatto che entrare la frase di recupero del mio portafoglio hardware comporta un considerevole rischio.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12-parole Portafoglio Daedalus",
   "transfer.legacy.daedalus.title": "Portafoglio Daedalus legacy",
   "transfer.legacy.icarus.title": "Icaro/Yoroi Wallet",
+  "transfer.rewards.key.label": "Rewards from private key",
   "transfer.rewards.paper.label": "Ricompense da portafoglio di carta",
   "transfer.rewards.regular.label": "Ricompense dalla frase di recupero",
   "transfer.summary.addressFrom.label": "Da",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Il dispositivo Ledger è bloccato, sbloccarlo e riprovare.",
   "wallet.hw.ledger.common.error.104": "Timeout del dispositivo Ledger, per favore riprova.",
   "wallet.hw.ledger.common.error.105": "Errore di rete. Per favore controlla la tua connessione Internet.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Aggiungi nuovo portafoglio",
   "wallet.nav.allWalletsLabel": "Tutti i portafogli",
   "wallet.nav.backButton": "Torna al mio portafoglio",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transazione intrawallet",
   "wallet.transaction.type.multiparty": "{currency} transazione multiparty",
+  "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Portafoglio era-Byron",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Impossibile trasferire fondi.",
   "yoroiTransfer.error.walletChangedError": "Il portafoglio è cambiato. Conferma nuovamente la transazione.",
   "yoroiTransfer.errorPage.title.label": "Impossibile trasferire da un altro portafoglio",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "Inserisci la frase di recupero di 15 parole utilizzata per eseguire il backup dell'altro portafoglio per ripristinare il saldo e trasferire tutti i fondi nel portafoglio corrente.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Inserisci la frase di recupero di 21 parole utilizzata per eseguire il backup del tuo portafoglio cartaceo Yoroi e della password cartacea per ripristinare il saldo e trasferire tutti i fondi.",
   "yoroiTransfer.start.instructions.hardware": "Hardware wallet",
