--- a/app/i18n/locales/ja-JP.json
+++ b/app/i18n/locales/ja-JP.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "ロードできませんでした。",
   "app.errors.unexpectedError": "予期せぬエラーが発生しました。再試行してください。",
   "app.errors.unknowError": "不明なエラー。",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "送信するトランザクションはありません。",
   "daedalusTransfer.error.transferFundsError": "送金できません。",
   "daedalusTransfer.error.webSocketRestoreError": "ブロックチェーンアドレスの復元中にエラーが発生しました。",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "アドレスの取得中",
   "daedalusTransfer.waiting.title.label": "ダイダロスウォレットを復元中です...",
   "daedalusTransfer.waiting.warning": "ネットワーク環境が不安定の場合は時間がかかる場合があります",
+  "decryption.label": "Decryption password",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "サポートにお問い合わせください。",
   "global.copyTooltipMessage": "コピーされました",
   "global.errors.fieldIsRequired": "この項目は必須です。",
-  "global.errors.invalidMasterKey": "入力されたマスターキーは無効です。確認してください。",
   "global.errors.invalidPaperPassword": "ペーパーウォレットのパスワードは10文字以上にする必要があります。",
   "global.errors.invalidRepeatPassword": "一致しません。",
   "global.errors.invalidWalletName": "1文字以上40文字以下のウォレット名を入力してください。",
   "global.errors.invalidWalletPassword": "送金パスワードは10文字以上にする必要があります。",
+  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
+  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
+  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.key.label": "Key",
   "global.labael.undelegate": "委任を解除する",
   "global.label.addToAddressbook": "アドレス帳に追加",
   "global.label.allow": "承諾",
@@ -290,9 +295,7 @@
   "testnet.label.message": "注意：{network}上のADAには貨幣価値がありません。詳細は、FAQ({faqLink})をご参照ください。",
   "testnet.shelley.label.message": "テストネットのネットワークを使用しています ({network})",
   "transfer.form.instructions.step1.text": "残高が復元されるまで1分程度かかります。復元後、ダイダロスウォレットからヨロイウォレットへの送金取引が表示されます。トランザクションの詳細を慎重に確認してください。 トランザクションを行うには、Cardanoネットワークの標準トランザクション手数料を支払う必要があります。",
-  "transfer.form.masterkey.input.hint": "マスターキーを入力",
   "transfer.form.masterkey.input.label": "マスターキー",
-  "transfer.form.masterkey.requirement": "※ マスターキーは192文字で16進数にエンコードされています。",
   "transfer.instructions.attention.title.label": "注意",
   "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "ハードウェアウォレットの復元フレーズには重大なリスクがあることを認識しています",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12単語のダイダロスウォレット",
   "transfer.legacy.daedalus.title": "レガシーダイダロスウォレット",
   "transfer.legacy.icarus.title": "イカロス/ヨロイウォレット",
+  "transfer.rewards.key.label": "Rewards from private key",
   "transfer.rewards.paper.label": "Rewards from paper wallet",
   "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "送信者",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Ledgerデバイスのロックを解除し、再度操作を行ってください。",
   "wallet.hw.ledger.common.error.104": "Ledgerデバイスがタイムアウトされました。再度操作を行ってください。",
   "wallet.hw.ledger.common.error.105": "ネットワークエラー。インターネットの接続を確認してください。",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "新規のウォレットを追加する",
   "wallet.nav.allWalletsLabel": "すべてのウォレット",
   "wallet.nav.backButton": "マイ・ウォレットに戻る",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "交換",
   "wallet.transaction.type.intrawallet": "{currency} ウォレット内トランザクション",
   "wallet.transaction.type.multiparty": "{currency} 複数人数トランザクション",
+  "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "従来式(Byron)ウォレット",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "資金を送金できませんでした。",
   "yoroiTransfer.error.walletChangedError": "ウォレットが変更されました。もう一度トランザクションを確認してください。",
   "yoroiTransfer.errorPage.title.label": "他のウォレットから送金できませんでした",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "他のウォレットの15単語の復元フレーズ入力してください。全残高がこちらのヨロイウォレットに転送されます。",
   "yoroiTransfer.form.instructions.step0Paper.text": "ヨロイペーパーウォレットの21単語からなる復元フレーズとペーパウォレットパスワードを入力し全残高を送金します",
   "yoroiTransfer.start.instructions.hardware": "ハードウエアウォレット",
