--- a/app/i18n/locales/ko-KR.json
+++ b/app/i18n/locales/ko-KR.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "로드할 수 없음!",
   "app.errors.unexpectedError": "예상치 못한 일이 발생했습니다. 다시 시도해 주십시오.",
   "app.errors.unknowError": "알 수 없는 오류.",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "전송할 거래가 없습니다.",
   "daedalusTransfer.error.transferFundsError": "자금을 이체할 수 없습니다.",
   "daedalusTransfer.error.webSocketRestoreError": "블록체인 주소를 복원하는 중 오류가 발생했습니다.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "주소 가져오는 중",
   "daedalusTransfer.waiting.title.label": "Daedalus 지갑 복원 중...",
   "daedalusTransfer.waiting.warning": "이것은 인터넷 연결이 좋지 않을 경우 시간이 오래 걸리거나 실패할 수 있습니다.",
+  "decryption.label": "Decryption password",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "지원 요청하기",
   "global.copyTooltipMessage": "복사됨",
   "global.errors.fieldIsRequired": "이 필드는 필수입니다.",
-  "global.errors.invalidMasterKey": "유효하지 않은 복구 구절 (master key) 입니다. 다시 확인해 주십시오.",
   "global.errors.invalidPaperPassword": "종이 지갑 암호는 적어도 10 글자 이상이어야 합니다.",
   "global.errors.invalidRepeatPassword": "일치하지 않습니다.",
   "global.errors.invalidWalletName": "지갑의 이름은 1~40자 사이여야 합니다.",
   "global.errors.invalidWalletPassword": "지불 암호는 적어도 10 글자 이상이어야 합니다.",
+  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
+  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
+  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.key.label": "Key",
   "global.labael.undelegate": "위임 취소",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "허용",
@@ -290,9 +295,7 @@
   "testnet.label.message": "주의: 이것은 {network} 네트워크 입니다. 이곳의 ADA는 어떤 금전적인 가치를 가지지 않습니다. 더욱 자세한 정보를 원하신다면, FAQ({faqLink})를 참고하세요.",
   "testnet.shelley.label.message": "당신은 현재 테스트넷 네트워크 ({network})에 있습니다.",
   "transfer.form.instructions.step1.text": "잔고가 복원될 때까지 1분 정도 소요됩니다. 복원 후, 다이달로스 지갑에서 요로이 지갑으로 모든 자금을 이동시키는 전송이 표시됩니다. 전송 상세내역을 신중히 확인해 주십시오. 전송을 하기 위해서는 카르다노의 네트워크 표준 전송 수수료 지불이 필요합니다.",
-  "transfer.form.masterkey.input.hint": "마스터키를 입력하세요",
   "transfer.form.masterkey.input.label": "마스터키",
-  "transfer.form.masterkey.requirement": "참고: 마스터키는 16진수로 인코딩된 192 글자 길이의 코드입니다.",
   "transfer.instructions.attention.title.label": "주의사항",
   "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "나는 하드웨어 지갑의 복구 코드를 입력하는 것이 심각한 보안상 위험성을 가지고 있음을 인지하고 있습니다.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12 단어 다이달로스 지갑 코드",
   "transfer.legacy.daedalus.title": "레거시 다이달로스 지갑",
   "transfer.legacy.icarus.title": "이카루스/요로이 지갑",
+  "transfer.rewards.key.label": "Rewards from private key",
   "transfer.rewards.paper.label": "Rewards from paper wallet",
   "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "보내는 사람",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Ledger 디바이스가 잠겨있습니다, 잠금을 해제하신 후 재시도하세요.",
   "wallet.hw.ledger.common.error.104": "Ledger 디바이스의 시간이 초과되었습니다, 재시도하세요.",
   "wallet.hw.ledger.common.error.105": "네트워크 에러가 발생했습니다. 인터넷 연결을 확인하세요.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "새로운 지갑 추가하기",
   "wallet.nav.allWalletsLabel": "모든 지갑",
   "wallet.nav.backButton": "내 지갑으로 돌아가기",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "환율",
   "wallet.transaction.type.intrawallet": "{currency} 지갑내 거래",
   "wallet.transaction.type.multiparty": "{currency} 다중 거래",
+  "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "바이런 시대 지갑",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "자금을 전송할 수 없습니다.",
   "yoroiTransfer.error.walletChangedError": "지갑이 변동되었습니다. 전송 내역을 다시 확인해주세요.",
   "yoroiTransfer.errorPage.title.label": "다른 지갑으로부터 전송할 수 없습니다.",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "지갑 복원과 현재 지갑으로의 모든 자금의 이체를 위해 다른 지갑의 15 단어 복구 코드를 입력하세요.",
   "yoroiTransfer.form.instructions.step0Paper.text": "요로이 종이 지갑의 21 글자 복구 코드와 암호를 입력하여 자금을 복구하고 전송하세요.",
   "yoroiTransfer.start.instructions.hardware": "하드웨어 지갑",
