--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Não foi possível carregar!",
   "app.errors.unexpectedError": "Algo inesperado aconteceu. Por favor tente novamente.",
   "app.errors.unknowError": "Erro desconhecido.",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Não há transação a ser enviada.",
   "daedalusTransfer.error.transferFundsError": "Não é possível transferir fundos.",
   "daedalusTransfer.error.webSocketRestoreError": "Erro ao restaurar endereços da blockchain.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Buscando endereços",
   "daedalusTransfer.waiting.title.label": "Carteira Daedalus está sendo restaurada",
   "daedalusTransfer.waiting.warning": "Isso pode levar muito tempo ou falhar em conexões de baixa qualidade",
+  "decryption.label": "Decryption password",
   "global.blog.learnMore": "Você pode ler nosso {blogLink} para saber mais.",
   "global.contact": "Contate o suporte",
   "global.copyTooltipMessage": "Copiado",
   "global.errors.fieldIsRequired": "Este campo é obrigatório.",
-  "global.errors.invalidMasterKey": "Chave mestra digitada está inválida, por favor verifique.",
   "global.errors.invalidPaperPassword": "A senha da Carteira de Papel requer pelo menos 10 caracteres.",
   "global.errors.invalidRepeatPassword": "Não corresponde.",
   "global.errors.invalidWalletName": "O nome da wallet precisa conter de 1 á 40 caracteres.",
   "global.errors.invalidWalletPassword": "A senha para pagamentos deve conter pelo menos 10 caracteres.",
+  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
+  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
+  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.key.label": "Key",
   "global.labael.undelegate": "Remover delegação",
   "global.label.addToAddressbook": "Adicionar ao livro de endereços",
   "global.label.allow": "Permitir",
@@ -290,9 +295,7 @@
   "testnet.label.message": "AVISO: esta é uma rede {network}. ADA não tem valor monetário aqui. Para mais informações, confira as perguntas frequentes em {faqLink}",
   "testnet.shelley.label.message": "VOCÊ ESTA NA REDE DE TESTES ({network}).",
   "transfer.form.instructions.step1.text": "Demora cerca de 1 minuto para restaurar o seu saldo. Na próxima etapa, você será apresentado a uma transação que movimentará todos os seus fundos. Por favor, revise os detalhes da transação com cuidado. Você precisará pagar uma taxa de transação padrão na rede Cardano para realizar a transação.",
-  "transfer.form.masterkey.input.hint": "Inserir chave mestra",
   "transfer.form.masterkey.input.label": "Chave mestra",
-  "transfer.form.masterkey.requirement": "Nota: as chaves mestras possuem 192 caracteres e codificação hexadecimal",
   "transfer.instructions.attention.title.label": "Atenção",
   "transfer.instructions.fee.source.disclaimer": "A taxa de transferência para resgatar seus fundos será paga pela carteira que você selecionou.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Eu reconheço que inserir minhas palavras de recuperação da hardware wallet acarreta em um risco significativo.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12-palavras carteira Daedalus",
   "transfer.legacy.daedalus.title": "Carteira Legacy Daedalus",
   "transfer.legacy.icarus.title": "Carteira Icarus/Yoroi",
+  "transfer.rewards.key.label": "Rewards from private key",
   "transfer.rewards.paper.label": "Recompensas vindas da carteira de papel",
   "transfer.rewards.regular.label": "Recompensas vindas da frase de recuperação",
   "transfer.summary.addressFrom.label": "De",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "O Dispositivo Ledger está bloqueado, por favor desbloqueie-o e tente novamente.",
   "wallet.hw.ledger.common.error.104": "O prazo de utilização do dispositivo Ledger acabou, por favor tente novamente.",
   "wallet.hw.ledger.common.error.105": "Erro de rede. Por favor cheque sua conexão com a internet.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Adicionar nova carteira",
   "wallet.nav.allWalletsLabel": "Todas as cateiras",
   "wallet.nav.backButton": "Voltar para carteiras",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} transação interna",
   "wallet.transaction.type.multiparty": "{currency} transação de múltiplas partes",
+  "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Retiradas",
   "wallet.transfer.cards.byron": "Carteira Byron-era",
   "wallet.transfer.cards.shelley": "Carteira era-Shelley",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Não foi possível transferir os fundos.",
   "yoroiTransfer.error.walletChangedError": "A Wallet foi alterada. Por favor reconfirme sua transação.",
   "yoroiTransfer.errorPage.title.label": "A transferência de outra Wallet não foi possível",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "Digite a frase de recuperação de 15 palavras utilizada no backup de sua outra wallet para restaurar o saldo e transferir todos os fundos para a wallet atual.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Entre as 21 palavras de recuperação usadas para o backup da sua Yoroi Paper Wallet e sua senha da paper wallet para restaurar o saldo e transferir todos os fundos.",
   "yoroiTransfer.start.instructions.hardware": "Hardware wallet",
