--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Не удалось загрузить!",
   "app.errors.unexpectedError": "Случилось что-то непредвиденное. Пожалуйста, повторите попытку.",
   "app.errors.unknowError": "Неизвестная ошибка.",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Нет транзакций для отправки.",
   "daedalusTransfer.error.transferFundsError": "Не удается перевести средства.",
   "daedalusTransfer.error.webSocketRestoreError": "Ошибка при востановлении блокчейн адресов.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "Получение адресов",
   "daedalusTransfer.waiting.title.label": "Кошелек Daedalus восстанавливается",
   "daedalusTransfer.waiting.warning": "Это может занять много времени или потерпеть неудачу при плохом интернет-соединении",
+  "decryption.label": "Decryption password",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "связаться со службой поддержки",
   "global.copyTooltipMessage": "Скопировано",
   "global.errors.fieldIsRequired": "Это поле обязательно к заполнению.",
-  "global.errors.invalidMasterKey": "Введен неверный мастер-ключ, пожалуйста, проверьте.",
   "global.errors.invalidPaperPassword": "Пароль бумажного кошелька должен содержать не менее 10 символов.",
   "global.errors.invalidRepeatPassword": "Не совпадает.",
   "global.errors.invalidWalletName": "Длина имени кошелька должна быть не менее 1 и не более 40 букв.",
   "global.errors.invalidWalletPassword": "Пароль должен содержать не менее 10 символов.",
+  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
+  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
+  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.key.label": "Key",
   "global.labael.undelegate": "Разделегировать",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "Разрешить",
@@ -290,9 +295,7 @@
   "testnet.label.message": "ПРЕДУПРЕЖДЕНИЕ: Это {network}. ADA не имеет денежной стоимости в {network}. Для получения дополнительной информации, ознакомьтесь с разделом часто задаваемых вопросов {faqLink}",
   "testnet.shelley.label.message": "ВЫ В ТЕСТНЕТЕ ({network}).",
   "transfer.form.instructions.step1.text": "Восстановление Вашего баланса займет около 1 минуты. На следующем этапе Вам будет показана транзакция, которая переместит все Ваши средства. Пожалуйста, тщательно просмотрите детали транзакции. Вам потребуется оплатить стандартную комиссию в сети Cardano за проведение транзакции.",
-  "transfer.form.masterkey.input.hint": "Ввести мастер-ключ",
   "transfer.form.masterkey.input.label": "Мастер-ключ",
-  "transfer.form.masterkey.requirement": "Примечание: мастер-ключи состоят из 192 символов и закодированы в шестнадцатеричном формате",
   "transfer.instructions.attention.title.label": "Внимание",
   "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Я признаю, что ввод восстановительной фразы моего аппаратного кошелька несет значительный риск.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "Кошелек Daedalus из 12 слов",
   "transfer.legacy.daedalus.title": "Старый Daedalus Кошелек",
   "transfer.legacy.icarus.title": "Icarus/Yoroi кошелек",
+  "transfer.rewards.key.label": "Rewards from private key",
   "transfer.rewards.paper.label": "Rewards from paper wallet",
   "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "Из",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Устройство Ledger заблокировано, пожалуйста, разблокируйте его и повторите попытку.",
   "wallet.hw.ledger.common.error.104": "Тайм-аут устройства Ledger, пожалуйста, повторите попытку.",
   "wallet.hw.ledger.common.error.105": "Ошибка сети. Пожалуйста, проверьте Ваше подключение к Интернету.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Добавить кошелек",
   "wallet.nav.allWalletsLabel": "Все кошельки",
   "wallet.nav.backButton": "Назад в мои кошельки",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Обмен",
   "wallet.transaction.type.intrawallet": "{currency} внутренняя транзакция",
   "wallet.transaction.type.multiparty": "{currency} смешанная транзакция",
+  "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Кошелек Byron-эры",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Не удается перевести средства.",
   "yoroiTransfer.error.walletChangedError": "Кошелек был изменен. Пожалуйста, подтвердите повторно Вашу транзакцию.",
   "yoroiTransfer.errorPage.title.label": "Не удалось перевести средства с другого кошелька",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "Введите фразу восстановления из 15 слов, используемую для резервного копирования другого Вашего кошелька, чтобы восстановить баланс и перевести все средства в этот кошелек.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Введите фразу восстановления из 21-го слова, используемую для резервного копирования вашего бумажного кошелька Yoroi, и ваш пароль от него, чтобы восстановить баланс и перевести все средства.",
   "yoroiTransfer.start.instructions.hardware": "Аппаратный кошелек",
