--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "Yüklenemedi!",
   "app.errors.unexpectedError": "Beklenmedik bir şey oldu. Lütfen tekrar deneyiniz.",
   "app.errors.unknowError": "Bilinmeyen hata.",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Gönderilecek işlem yok.",
   "daedalusTransfer.error.transferFundsError": "Para aktarılamıyor.",
   "daedalusTransfer.error.webSocketRestoreError": "Blokzincir adresleri geri yüklenirken hata oluştu.",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "İnternet adresleri getiriliyor",
   "daedalusTransfer.waiting.title.label": "Daedalus cüzdanı geri yükleniyor",
   "daedalusTransfer.waiting.warning": "Bu, zayıf internet bağlantısıyla uzun zaman alabilir veya başarısız olabilir",
+  "decryption.label": "Decryption password",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "iletişim desteği 2",
   "global.copyTooltipMessage": "Kopyalandı",
   "global.errors.fieldIsRequired": "Girilmesi gerekli alan.",
-  "global.errors.invalidMasterKey": "Geçersiz kodlama anahtarı girildi, lütfen kontrol edin.",
   "global.errors.invalidPaperPassword": "Kağıt cüzdan şifresi en az 10 karakter gerektirir.",
   "global.errors.invalidRepeatPassword": "Eşleşmiyor.",
   "global.errors.invalidWalletName": "Cüzdan adı en az 1 en fazla 40 karakter olmalıdır.",
   "global.errors.invalidWalletPassword": "Harcama şifresi en az 10 karakter gerektirir.",
+  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
+  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
+  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.key.label": "Key",
   "global.labael.undelegate": "Yetkilendirilmemiş",
   "global.label.addToAddressbook": "Adres defterine ekle",
   "global.label.allow": "İzin Ver",
@@ -290,9 +295,7 @@
   "testnet.label.message": "UYARI: Bu bir {network} ağıdır. ADA'nın burada parasal bir değeri yoktur. Daha fazla bilgi için {faqLink} adresindeki FAQ bölümüne göz atın",
   "testnet.shelley.label.message": "TESTNET ({network}) AĞINDASINIZ.",
   "transfer.form.instructions.step1.text": "Bakiyenizi geri yüklemek yaklaşık 1 dakika sürecektir. Bir sonraki adımda, tüm paranızı taşıyacak bir işlem sunulacak. Lütfen işlemin ayrıntılarını dikkatlice gözden geçirin. İşlemi yapmak için Cardano ağında standart bir işlem ücreti ödemeniz gerekecektir.",
-  "transfer.form.masterkey.input.hint": "Ana anahtarı giriniz",
   "transfer.form.masterkey.input.label": "Ana anahtar",
-  "transfer.form.masterkey.requirement": "Not: kodlama anahtarları 192 karakter ve onaltılık kodludur",
   "transfer.instructions.attention.title.label": "Dikkat",
   "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Donanım cüzdanımın kurtarma sözcüklerini girmenin önemli bir risk taşıdığını kabul ediyorum.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12-kelime Daedalus Cüzdan",
   "transfer.legacy.daedalus.title": "Eski Daedalus Cüzdan",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Cüzdan",
+  "transfer.rewards.key.label": "Rewards from private key",
   "transfer.rewards.paper.label": "Kağıt cüzdandan ödüller",
   "transfer.rewards.regular.label": "Kurtarma sözcüklerinden ödüller",
   "transfer.summary.addressFrom.label": "İtibaren",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Ledger aygıtı kilitli, lütfen kilidini açın ve tekrar deneyin.",
   "wallet.hw.ledger.common.error.104": "Ledger aygıtı zaman aşımı, tekrar deneyin.",
   "wallet.hw.ledger.common.error.105": "Ağ hatası. Lütfen internet bağlantınızı kontrol edin.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Yeni cüzdan ekle",
   "wallet.nav.allWalletsLabel": "Tüm cüzdanlar",
   "wallet.nav.backButton": "Cüzdanlarıma geri dön",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "Kur",
   "wallet.transaction.type.intrawallet": "{currency} cüzdan içi işlem",
   "wallet.transaction.type.multiparty": "{currency} çok parçalı işlem",
+  "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Çekim",
   "wallet.transfer.cards.byron": "Byron-era cüzdan",
   "wallet.transfer.cards.shelley": "Shelley-era cüzdan",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "Para aktarılamıyor.",
   "yoroiTransfer.error.walletChangedError": "Cüzdan değişti. Lütfen işleminizi yeniden onaylayın.",
   "yoroiTransfer.errorPage.title.label": "Başka bir cüzdandan aktarılamıyor",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "Bakiyeyi yeniden yüklemek ve tüm fonları mevcut cüzdanınıza aktarmak için diğer cüzdanınızı yedeklemek için kullanılan 15 kelimeden oluşan kurtarma sözcüklerinizi girin.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Bakiyeyi geri yüklemek ve tüm paraları aktarmak ve Yoroi Kağıt cüzdanınızı ve kağıt parolanızı yedeklemek için kullanılan 21 kelimelik kurtarma sözcüklerinizi giriniz.",
   "yoroiTransfer.start.instructions.hardware": "Donanım cüzdan",
