--- a/app/i18n/locales/zh-Hant.json
+++ b/app/i18n/locales/zh-Hant.json
@@ -45,6 +45,7 @@
   "app.errors.unableToLoad": "無法加載",
   "app.errors.unexpectedError": "意想不到的事情發生了。請重試。",
   "app.errors.unknowError": "未知錯誤。",
+  "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "無交易傳送。",
   "daedalusTransfer.error.transferFundsError": "無法轉移資金。",
   "daedalusTransfer.error.webSocketRestoreError": "還原區塊鏈結時出現錯誤。",
@@ -61,15 +62,19 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "獲取地址",
   "daedalusTransfer.waiting.title.label": "正在還原 Daedalus 錢包...",
   "daedalusTransfer.waiting.warning": "這可能需要很長時間，或在互聯網連接不良時失敗",
+  "decryption.label": "Decryption password",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.contact": "聯繫支援",
   "global.copyTooltipMessage": "已複製",
   "global.errors.fieldIsRequired": "此欄位為必填欄。",
-  "global.errors.invalidMasterKey": "輸入的主密鑰無效, 請重新檢查。",
   "global.errors.invalidPaperPassword": "Paper Wallet password requires at least 10 characters.",
   "global.errors.invalidRepeatPassword": "不相符。",
   "global.errors.invalidWalletName": "錢包名稱需要至少1個, 最多40個字母。",
   "global.errors.invalidWalletPassword": "Spending password requires at least 10 characters.",
+  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
+  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
+  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
+  "global.key.label": "Key",
   "global.labael.undelegate": "Undelegate",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "允許",
@@ -290,9 +295,7 @@
   "testnet.label.message": "警告：這是一個網絡 {network}。網絡上的ADA並沒有貨幣價值。有關更多資訊，請查看{faqLink} 上的常見問題。",
   "testnet.shelley.label.message": "您正在使用測試網網絡({network})。",
   "transfer.form.instructions.step1.text": "恢復你的餘額大約需要1分鐘。在下一步, 您將看到一筆將從Daedalus移動您所有資金到Yoroi的交易。請仔細閱讀交易細節。您需要在卡Cardano網絡上支付標準交易費用才能進行交易。",
-  "transfer.form.masterkey.input.hint": "輸入主密鑰",
   "transfer.form.masterkey.input.label": "主密鑰",
-  "transfer.form.masterkey.requirement": "注意: 主密鑰為192個字元及十六進位編碼",
   "transfer.instructions.attention.title.label": "注意",
   "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "I acknowledge that entering my hardware wallet's recovery phrase carries significant risk.",
@@ -304,6 +307,7 @@
   "transfer.legacy.daedalus.12word": "12-word Daedalus wallet",
   "transfer.legacy.daedalus.title": "Legacy Daedalus Wallet",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Wallet",
+  "transfer.rewards.key.label": "Rewards from private key",
   "transfer.rewards.paper.label": "Rewards from paper wallet",
   "transfer.rewards.regular.label": "Rewards from recovery phrase",
   "transfer.summary.addressFrom.label": "寄件人",
@@ -500,6 +504,10 @@
   "wallet.hw.ledger.common.error.103": "Ledger已鎖定，請解鎖並重試。",
   "wallet.hw.ledger.common.error.104": "Ledger超時，請重試。",
   "wallet.hw.ledger.common.error.105": "網絡錯誤。請檢查你的網絡連接.",
+  "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
+  "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
+  "wallet.includeKey.withKeyLabel": "With key",
+  "wallet.includeKey.withoutKeyLabel": "Without key",
   "wallet.nav.addButton": "Add new wallet",
   "wallet.nav.allWalletsLabel": "All wallets",
   "wallet.nav.backButton": "Back to my wallets",
@@ -686,6 +694,7 @@
   "wallet.transaction.type.exchange": "兌換",
   "wallet.transaction.type.intrawallet": "{currency} 錢包間交易",
   "wallet.transaction.type.multiparty": "{currency} 多方交易",
+  "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
@@ -709,6 +718,7 @@
   "yoroiTransfer.error.transferFundsError": "無法轉移資金。",
   "yoroiTransfer.error.walletChangedError": "錢包已經轉換。 請重新確認您的交易。",
   "yoroiTransfer.errorPage.title.label": "無法從其他錢包轉移",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
   "yoroiTransfer.form.instructions.step0.text": "輸入用於備份另一個錢包的15字恢復短語來恢復餘額並將所有資金從轉移到現在的錢包。",
   "yoroiTransfer.form.instructions.step0Paper.text": "輸入用於備份您的Yoroi 紙錢包的21字恢復短語，和您的紙密碼以恢復餘額並轉移所有資金。",
   "yoroiTransfer.start.instructions.hardware": "Hardware wallet",
