New Crowdin updates (#1719)

--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -1,5 +1,5 @@
 {
-  "api.errors.ApiMethodNotYetImplementedError": "Este método de la API no esta implementado aún.",
+  "api.errors.ApiMethodNotYetImplementedError": "Este método de la API no ha sido implementado todavía.",
   "api.errors.GenericApiError": "Se ha producido un error, inténtalo de nuevo más tarde.",
   "api.errors.IncorrectPasswordError": "Contraseña de billetera incorrecta.",
   "api.errors.NotEnoughMoneyToSendError": "No hay suficiente ADA para hacer esta transacción.",
@@ -33,7 +33,7 @@
   "api.errors.noOutputsError": "La transacción requiere al menos una salida, y no se añadió ninguna salida",
   "api.errors.pendingTransactionError": "Error al actualizar las transacciones pendientes.",
   "api.errors.poolMissingApiError": "No se pudo localizar este stake pool. Revisa su ID y asegúrate de que no fue dado de baja.",
-  "api.errors.rewardAddressEmpty": "Reward address is empty.",
+  "api.errors.rewardAddressEmpty": "La dirección de recompensa está vacía.",
   "api.errors.rollbackApiError": "Se detectó un retroceso.",
   "api.errors.sendTransactionApiError": "Error recibido del servidor al enviar la transacción.",
   "api.errors.sendTransactionError": "Error recibido de la llamada a la API al intentar enviar al transacción.",
@@ -64,7 +64,7 @@
   "daedalusTransfer.waiting.title.label": "La billetera de Daedalus está siendo restaurada",
   "daedalusTransfer.waiting.warning": "Esto puede tomar algo de tiempo (o fallar) si la conexión a Internet es deficiente",
   "decryption.label": "Contraseña de descifrado",
-  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "global.blog.learnMore": "Puedes leer nuestro {blogLink} para conocer más.",
   "global.contact": "contactar con el soporte",
   "global.copyTooltipMessage": "Copiado",
   "global.errors.fieldIsRequired": "Este campo es obligatorio.",
@@ -131,6 +131,7 @@
   "global.unit.ada": "ADA",
   "global.uriExplanation": "Permiten compartir fácilmente facturas con amigos y empresas, con sólo hacer clic en una URL.",
   "global.uriSchemeTitleLabel": "URLs de Pago de Cardano",
+  "global.wrongNetwork.address": "Wrong network for address.",
   "incorrectTime.line1": "ADVERTENCIA: La hora de tu ordenador no coincide con la del servidor. Esto puede causar resultados inesperados",
   "incorrectTime.line2": "Diferencia de tiempo:",
   "incorrectTime.line3": "Ajusta la hora en tu dispositivo para resolver este problema",
@@ -225,7 +226,7 @@
   "settings.general.languageSelect.info": "Para EMURGO, la familiaridad en Yoroi es un tema importante. Creemos que entender los conceptos de la blockchain es más fácil en tu idioma nativo. Intentamos apoyar tantos idiomas como sea posible, pero para una selección más amplia de idiomas necesitamos aceptar la ayuda de traductores de la comunidad. La traducción del idioma seleccionado es proporcionada en su totalidad por la comunidad.",
   "settings.general.languageSelect.labelInfo": "La traducción del idioma elegido es proporcionada en su totalidad por la comunidad",
   "settings.general.translation.acknowledgment": "Gracias a los siguientes miembros por su contribución: ",
-  "settings.general.translation.contributors": "Rodrigo [RODRI/CAZ], Seba",
+  "settings.general.translation.contributors": "Rodrigo [RODRI], Seba",
   "settings.menu.blockchain.link.label": "Blockchain",
   "settings.menu.externalStorage.link.label": "Almacenamiento de memos",
   "settings.menu.general.link.label": "General",
@@ -429,6 +430,7 @@
   "wallet.currency.pick.cardano": "Cardano es el primer protocolo de prueba de participación probadamente seguro",
   "wallet.currency.pick.ergo": "Ergo construye características criptográficas avanzadas y una funcionalidad DeFi radicalmente nueva sobre los sólidos cimientos de una década de teoría y desarrollo de la blockchain",
   "wallet.currency.pick.header": "Selecciona una moneda o plataforma",
+  "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "Dirígete a la sección de delegación para elegir el stake pool al que quieres delegar.",
   "wallet.dashboard.empty.title": "No has delegado tus ADA aún",
   "wallet.dashboard.epochEndTitle": "Finaliza en",
