--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -131,6 +131,7 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Diese ermöglichen es Dir sehr einfach Rechnungen mit Freunden und Geschäftspartnern durch einfaches Klicken auf eine URL zu teilen.",
   "global.uriSchemeTitleLabel": "Cardano Zahlungs-URLs",
+  "global.wrongNetwork.address": "Falsches Netzwerk für diese Adresse.",
   "incorrectTime.line1": "ACHTUNG: Die Zeit deines Computers stimmt nicht mit der des Servers überein. Das kann unerwartete Ergebnisse haben",
   "incorrectTime.line2": "Zeitdifferenz: ",
   "incorrectTime.line3": "Synchronisiere die Zeit auf Deinem Gerät um das Problem zu beheben",
@@ -429,6 +430,7 @@
   "wallet.currency.pick.cardano": "Cardano ist das erste nachweislich sichere Proof-of-Stake Protokoll",
   "wallet.currency.pick.ergo": "Ergo baut fortschrittliche kryptografische Funktionen und radikal neue DeFi-Funktionalität auf einem felsenfesten Fundament, das durch ein Jahrzehnt der Blockchain-theorie und -entwicklung gelegt wurde",
   "wallet.currency.pick.header": "Wähle eine Währung oder Plattform",
+  "wallet.currency.pick.testnetDescription": "Das Testnet ist eine alternative Chain mit der Tests durchgeführt werden. Dies erlaubt es Anwendungsentwicklern zu experimentieren und testen, ohne dass echte Geldwerte benutzt werden müssen.",
   "wallet.dashboard.empty.text": "Gehe auf die Delegationsseite um auszuwählen an welchen Stake Pool due delegieren möchtest.",
   "wallet.dashboard.empty.title": "Du hast noch keine ADA delegiert",
   "wallet.dashboard.epochEndTitle": "Zeit bis zum Ende der Epoche",
