--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -33,7 +33,7 @@
   "api.errors.noOutputsError": "Transactie vereist minimaal 1 bestemming, maar er is geen bestemming toegevoegd",
   "api.errors.pendingTransactionError": "Fout tijdens het vernieuwen van lopende transacties.",
   "api.errors.poolMissingApiError": "Kon deze Stakepool niet vinden. Controleer de ID nogmaals en controleer of de Stakepool niet is afgemeld.",
-  "api.errors.rewardAddressEmpty": "Reward address is empty.",
+  "api.errors.rewardAddressEmpty": "Vergoedingenadres is leeg.",
   "api.errors.rollbackApiError": "Terugdraaien is gedetecteerd.",
   "api.errors.sendTransactionApiError": "Serverfout tijdens het verzenden van een transactie.",
   "api.errors.sendTransactionError": "Fout ontvangen van de API methode tijdens het zenden van een transactie.",
@@ -131,6 +131,7 @@
   "global.unit.ada": "ADA",
   "global.uriExplanation": "Deze stellen u in staat rekeningen met vrienden of zakelijke partners te delen door eenvoudig op een URL te klikken.",
   "global.uriSchemeTitleLabel": "Cardano betaal URL's",
+  "global.wrongNetwork.address": "Wrong network for address.",
   "incorrectTime.line1": "WAARSCHUWING: De tijd op uw computer komt niet overeen met de server. Dit kan tot onverwachte resultaten leiden",
   "incorrectTime.line2": "Tijdsverschil:",
   "incorrectTime.line3": "Synchroniseer de tijd op uw apparaat om dit probleem op te lossen",
@@ -429,6 +430,7 @@
   "wallet.currency.pick.cardano": "Cardano is het eerste, aantoonbaar veilige, \"proof of stake\"-protocol",
   "wallet.currency.pick.ergo": "Ergo bouwt geavanceerde cryptografische functies en radicaal nieuwe DeFi-functionaliteit op de solide basis die is gelegd door een decennium van blockchain-theorie en -ontwikkeling",
   "wallet.currency.pick.header": "Kies een valuta of een platform",
+  "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "Ga naar de delegatiepagina om uw Stakepool voor delegatie te kiezen.",
   "wallet.dashboard.empty.title": "U heeft uw ADA nog niet gedelegeerd",
   "wallet.dashboard.epochEndTitle": "Tijd tot einde periode",
