--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -33,7 +33,7 @@
   "api.errors.noOutputsError": "A transação necessita de pelo menos uma saída, mas nenhuma foi adicionada",
   "api.errors.pendingTransactionError": "Erro ao atualizar transações pendentes.",
   "api.errors.poolMissingApiError": "Não foi possível encontrar este pool. Verifique duas vezes o ID e verifique se o pool não foi cancelado o registro.",
-  "api.errors.rewardAddressEmpty": "Reward address is empty.",
+  "api.errors.rewardAddressEmpty": "Endereço de recompensa está vazio.",
   "api.errors.rollbackApiError": "Uma reversão foi detectada.",
   "api.errors.sendTransactionApiError": "Erro recebido do servidor durante o envio da transação.",
   "api.errors.sendTransactionError": "Erro recebido na chamada do método da API durante o envio da transação.",
@@ -131,6 +131,7 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Eles permitem que você compartilhe faturas facilmente com amigos e empresas clicando em um URL.",
   "global.uriSchemeTitleLabel": "URLs de pagamento Cardano",
+  "global.wrongNetwork.address": "Wrong network for address.",
   "incorrectTime.line1": "Atenção: a hora do seu computador não está igual ao servidor. Isso pode causar resultados inesperados",
   "incorrectTime.line2": "Diferença de hora:",
   "incorrectTime.line3": "Sincronize a hora de seu dispositivo para resolver esse problema",
@@ -429,6 +430,7 @@
   "wallet.currency.pick.cardano": "Cardano é o primeiro protocol de prova de stake comprovadamente seguro",
   "wallet.currency.pick.ergo": "Ergo cria recursos criptográficos avançados e funcionalidade DeFi radicalmente nova, embasada em fundações sólidas estabelecidas por uma década de teoria e desenvolvimento de blockchain",
   "wallet.currency.pick.header": "Escolha a moeda ou plataforma",
+  "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "Vá para a página de delegação para escolher em qual stake pool você deseja delegar.",
   "wallet.dashboard.empty.title": "Você não delegou a sua ADA ainda",
   "wallet.dashboard.epochEndTitle": "Tempo até o fim da Época",
