--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -30,10 +30,10 @@
   "api.errors.invalidMnemonicError": "Geçersiz kurtarma sözcüğü girildi, lütfen kontrol edin.",
   "api.errors.invalidWitnessError": "İmza geçersiz.",
   "api.errors.noInputsError": "Kurtarma metninizle yeniden yüklenen cüzdan boş. Lütfen kurtarma sözcüklerinizi kontrol edin ve geri yüklemeyi tekrar deneyin.",
-  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
+  "api.errors.noOutputsError": "İşlem en az bir çıktı gerektiriyor, ancak çıktı eklenmedi",
   "api.errors.pendingTransactionError": "Bekleyen işlemler güncellenirken hata oluştu.",
   "api.errors.poolMissingApiError": "Bu havuz bulunamadı. Kimliği tekrar kontrol edin ve havuzun kaydının kaldırılmadığından emin olun.",
-  "api.errors.rewardAddressEmpty": "Reward address is empty.",
+  "api.errors.rewardAddressEmpty": "Ödül adresi boş.",
   "api.errors.rollbackApiError": "Geri alma algılandı.",
   "api.errors.sendTransactionApiError": "İşlem gönderilirken sunucudan hata alındı.",
   "api.errors.sendTransactionError": "İşlem gönderilirken api çağrı yönteminden hata alındı.",
@@ -46,7 +46,7 @@
   "app.errors.unableToLoad": "Yüklenemedi!",
   "app.errors.unexpectedError": "Beklenmedik bir şey oldu. Lütfen tekrar deneyiniz.",
   "app.errors.unknowError": "Bilinmeyen hata.",
-  "crash.screen.title": "Yoroi crashed",
+  "crash.screen.title": "Yoroi çöktü",
   "daedalusTransfer.error.noTransferTxError": "Gönderilecek işlem yok.",
   "daedalusTransfer.error.transferFundsError": "Para aktarılamıyor.",
   "daedalusTransfer.error.webSocketRestoreError": "Blokzincir adresleri geri yüklenirken hata oluştu.",
@@ -63,8 +63,8 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "İnternet adresleri getiriliyor",
   "daedalusTransfer.waiting.title.label": "Daedalus cüzdanı geri yükleniyor",
   "daedalusTransfer.waiting.warning": "Bu, zayıf internet bağlantısıyla uzun zaman alabilir veya başarısız olabilir",
-  "decryption.label": "Decryption password",
-  "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "decryption.label": "Şifre çözme şifresi",
+  "global.blog.learnMore": "Daha fazla bilgi edinmek için {blogLink} sayfasına bakabilirsiniz.",
   "global.contact": "iletişim desteği 2",
   "global.copyTooltipMessage": "Kopyalandı",
   "global.errors.fieldIsRequired": "Girilmesi gerekli alan.",
@@ -72,10 +72,10 @@
   "global.errors.invalidRepeatPassword": "Eşleşmiyor.",
   "global.errors.invalidWalletName": "Cüzdan adı en az 1 en fazla 40 karakter olmalıdır.",
   "global.errors.invalidWalletPassword": "Harcama şifresi en az 10 karakter gerektirir.",
-  "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
-  "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
-  "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
-  "global.key.label": "Key",
+  "global.invalidKeyFormat.label": "Geçersiz anahtar. Onaltılık kodlanmış olmalıdır.",
+  "global.invalidKeyLength.label": "Geçersiz anahtar. {length} karakter uzunluğunda olmalıdır.",
+  "global.invalidKeyLength2.label": "Geçersiz anahtar. {lengths} biri olmalıdır.",
+  "global.key.label": "Anahtar",
   "global.labael.undelegate": "Yetkilendirilmemiş",
   "global.label.addToAddressbook": "Adres defterine ekle",
   "global.label.allow": "İzin Ver",
@@ -95,7 +95,7 @@
   "global.labels.error": "Hata",
   "global.labels.finish": "Tamamla",
   "global.labels.goBack": "Geri dön",
-  "global.labels.keyRegistrationPointer": "Key registration pointer",
+  "global.labels.keyRegistrationPointer": "Anahtar kayıt işaretçisi",
   "global.labels.loadMore": "Daha fazla göster",
   "global.labels.memo": "Memo",
   "global.labels.next": "İleri",
@@ -131,8 +131,9 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Bunlar, yalnızca bir URL'yi tıklayarak faturaları arkadaşlarınızla ve işletmelerinizle kolayca paylaşmanıza olanak tanır.",
   "global.uriSchemeTitleLabel": "Cardano Ödeme Adresleri",
+  "global.wrongNetwork.address": "Wrong network for address.",
   "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
-  "incorrectTime.line2": "Time difference:",
+  "incorrectTime.line2": "Zaman farkı:",
   "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
   "inline.editing.input.cancel.label": "iptal",
   "inline.editing.input.change.label": "değiştir",
@@ -308,7 +309,7 @@
   "transfer.legacy.daedalus.12word": "12-kelime Daedalus Cüzdan",
   "transfer.legacy.daedalus.title": "Eski Daedalus Cüzdan",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Cüzdan",
-  "transfer.rewards.key.label": "Rewards from private key",
+  "transfer.rewards.key.label": "Özel anahtardan ödüller",
   "transfer.rewards.paper.label": "Kağıt cüzdandan ödüller",
   "transfer.rewards.regular.label": "Kurtarma sözcüklerinden ödüller",
   "transfer.summary.addressFrom.label": "İtibaren",
@@ -368,7 +369,7 @@
   "wallet.address.category.byron": "Byron-era adres biçimi kullanılarak oluşturulan adresler",
   "wallet.address.category.group": "Bir harcama anahtarı ve bir bahis anahtarı kombinasyonu ile oluşturulan adresler",
   "wallet.address.category.p2pk": "Doğrudan bir ortak anahtardan oluşturulan adresler",
-  "wallet.address.category.reward": "Address for your staking key",
+  "wallet.address.category.reward": "Staking adresinizin anahtarı",
   "wallet.amountInput.feesLabel": "+ {amount} ücret",
   "wallet.backup.dialog.legacy.checkConfirm": "Cüzdanınızın yükseltilmesi gerekip gerekmediğini kontrol etmek ister misiniz?",
   "wallet.backup.dialog.legacy.explanation": "29 Kasım 2019 tarihinde cüzdanınızda ADA varsa,\n    cüzdanınızı Shelley \"ödül cüzdanı\"na yükseltmeniz gerekir.",
@@ -429,6 +430,7 @@
   "wallet.currency.pick.cardano": "Cardano, hisse ispatının ilk kanıtlanabilir protokolüdür",
   "wallet.currency.pick.ergo": "Ergo, on yıllık blokzincir teorisi ve gelişiminin getirdiği çok sağlam temeller üzerinde gelişmiş şifreleme özellikleri ve radikal olarak yeni DeFi işlevselliği oluşturuyor",
   "wallet.currency.pick.header": "Bir para birimi veya platform seçin",
+  "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "Hangi stake havuzunda yetki vermek istediğinizi seçmek için temsilci sayfasına gidin.",
   "wallet.dashboard.empty.title": "ADA'nızı henüz devretmediniz",
   "wallet.dashboard.epochEndTitle": "Dönem sonuna kadar geçen süre",
@@ -476,7 +478,7 @@
   "wallet.dashboard.summary.rewardsTitle": "Toplam Ödüller",
   "wallet.dashboard.summary.title": "Toplam Ödül",
   "wallet.dashboard.upcomingRewards.at": "saat",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "Dönemin sonu",
   "wallet.dashboard.upcomingRewards.noRewards": "bu dönemde ödül kazanılmayacak",
   "wallet.dashboard.upcomingRewards.title": "Gelecek Ödül",
   "wallet.dashboard.warning.pendingTx": "Bekleyen işleminiz onaylandıktan sonra bahis panosu bilgileri güncellenir",
@@ -507,8 +509,8 @@
   "wallet.hw.ledger.common.error.105": "Ağ hatası. Lütfen internet bağlantınızı kontrol edin.",
   "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
   "wallet.includeKey.explanationLine2": "It will allow support staff to see your wallet's transaction history, but they will <strong>not</strong> be able to spend or move your funds in any way (private key is <strong>not</strong> included)",
-  "wallet.includeKey.withKeyLabel": "With key",
-  "wallet.includeKey.withoutKeyLabel": "Without key",
+  "wallet.includeKey.withKeyLabel": "Anahtarla",
+  "wallet.includeKey.withoutKeyLabel": "Anahtarsız",
   "wallet.nav.addButton": "Yeni cüzdan ekle",
   "wallet.nav.allWalletsLabel": "Tüm cüzdanlar",
   "wallet.nav.backButton": "Cüzdanlarıma geri dön",
@@ -547,7 +549,7 @@
   "wallet.receive.page.generateNewAddressButtonLabel": "Yeni adres oluştur",
   "wallet.receive.page.generateURLLabel": "URL Oluştur",
   "wallet.receive.page.generatedAddressesSectionTitle": "Oluşturulan adresler",
-  "wallet.receive.page.internal.learnMore": "https://emurgo.io/en/blog/understanding-unspent-transaction-outputs-in-cardano",
+  "wallet.receive.page.internal.learnMore": "https://emurgo.io/tr/blog/understanding-unspent-transaction-outputs-in-cardano",
   "wallet.receive.page.internalWarning1": "Dahili adresler (veya \"değiştir\" adresleri), hangi adreslerin blok zincirinde size ait olduğunu gizleyerek gizliliğinizi korur",
   "wallet.receive.page.internalWarning2": "adresler burada kişisel denetim amacıyla gösterilir ve <strong> asla </strong> kullanılmamalıdır.",
   "wallet.receive.page.label": "Etiket",
@@ -695,7 +697,7 @@
   "wallet.transaction.type.exchange": "Kur",
   "wallet.transaction.type.intrawallet": "{currency} cüzdan içi işlem",
   "wallet.transaction.type.multiparty": "{currency} çok parçalı işlem",
-  "wallet.transaction.withdraw": "Withdraw",
+  "wallet.transaction.withdraw": "Çekim",
   "wallet.transaction.withdrawalsLabel": "Çekim",
   "wallet.transfer.cards.byron": "Byron-era cüzdan",
   "wallet.transfer.cards.shelley": "Shelley-era cüzdan",
@@ -718,7 +720,7 @@
   "yoroiTransfer.error.noTransferTxError": "Gönderilecek herhangi bir aktarım işlemi yoktur.",
   "yoroiTransfer.error.transferFundsError": "Para aktarılamıyor.",
   "yoroiTransfer.error.walletChangedError": "Cüzdan değişti. Lütfen işleminizi yeniden onaylayın.",
-  "yoroiTransfer.form.instructions.stakingKEy.text": "Enter your staking key here and the spending password if the key is encrypted",
+  "yoroiTransfer.form.instructions.stakingKEy.text": "Anahtar şifrelenmişse , staking anahtarınızı ve harcama şifrenizi buraya girin",
   "yoroiTransfer.form.instructions.step0.text": "Bakiyeyi yeniden yüklemek ve tüm fonları mevcut cüzdanınıza aktarmak için diğer cüzdanınızı yedeklemek için kullanılan 15 kelimeden oluşan kurtarma sözcüklerinizi girin.",
   "yoroiTransfer.form.instructions.step0Paper.text": "Bakiyeyi geri yüklemek ve tüm paraları aktarmak ve Yoroi Kağıt cüzdanınızı ve kağıt parolanızı yedeklemek için kullanılan 21 kelimelik kurtarma sözcüklerinizi giriniz.",
   "yoroiTransfer.start.instructions.hardware": "Donanım cüzdan",
