fix misc issues

--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "Restore wallet",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
-  "wallet.add.optionDialog.restore.normalWallet.description": "If you have a Yoroi recovery phrase consisting of 15 words generated when you created a Yoroi Wallet, choose this option to restore your wallet.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "Enter a 15-word recovery phrase",
+  "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "If you have generated a Yoroi paper wallet (which is usually printed and kept offline), you can choose this option to import the funds from your Yoroi paper wallet.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Paper Wallet",
   "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
